--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="ua.polohalo.word_composer">
 
     <uses-feature android:name="android.software.leanback"
-        android:required="true" />
+        android:required="false" />
 
     <uses-feature android:name="android.hardware.touchscreen"
         android:required="false" />
